// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DescribeElementCardBanner renders correct snapshot 1`] = `
<div>
  <div
    class="DescribeElementCardBanner-contentContainer-2"
  >
    <div
      class="DescribeElementCardBanner-iconContainer-5"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root DescribeElementCardBanner-icon-4"
      >
        people
      </span>
    </div>
    <h5
      class="MuiTypography-root DescribeElementCardBanner-cardTitle-1 MuiTypography-h5"
    >
      expectedTitle
    </h5>
  </div>
</div>
`;

exports[`DescribeElementCardBanner renders correct snapshot with switches 1`] = `
<div>
  <div
    class="DescribeElementCardBanner-contentContainer-46"
  >
    <h5
      class="MuiTypography-root DescribeElementCardBanner-cardTitle-45 MuiTypography-h5"
    >
      expectedTitle
    </h5>
  </div>
</div>
`;
